lab1/Test/L1-A-13-55.output
Error Type A at Line 1
Error Type A at Line 4
Error Type B at Line 5
Error Type B at Line 9
Error Type B at Line 12
Error Type B at Line 20
Error Type B at Line 33
